feat: Se agrega tabla con ID y nombre

--- a/Actividad-1/index.html
+++ b/Actividad-1/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Paulina Muñoz Saldarriaga</h1>
+    <table>
+        <thead>
+            <th>#</th>
+            <th>Nombre</th>
+        </thead>  
+        <tr>
+           <td>456</td> 
+           <td>Pau</td>
+        </tr>
+    </table>
 
 </body>
 </html>
