feat:Actividad en clase pelicula harry potter

--- a/Actividad-1/index.html
+++ b/Actividad-1/index.html
@@ -6,17 +6,49 @@
     <title>Actividad 1 DW</title>
 </head>
 <body>
-    <h1>Paulina Muñoz Saldarriaga</h1>
+    <h1>Harry Potter and the Philosopher's Stone </h1>
     <table>
-        <thead>
-            <th>#</th>
-            <th>Nombre</th>
-        </thead>  
-        <tr>
-           <td>456</td> 
-           <td>Pau</td>
-        </tr>
+        <td>
+            <img src = "images/HP.PNG" height="150" width="150">
+        </td>
+        <td>
+            <p> <strong>Harry Potter and the Philosopher's Stone</strong> is a British-American fantasy film based 
+                on the first novel by J. K. Rowling, released on 16 November 2001. It is directed by
+                Chris Columbus, written by Steve Kloves, and produced by David Heyman. The film stars
+                Daniel Radcliffe, Rupert Grint, Emma Watson, John Cleese, Robbie Coltrane, Richard
+                Griffiths, Richard Harris, Ian Hart, John Hurt, Alan Rickman, Fiona Shaw, Maggie 
+                Smith, Sean Biggerstaff, Warwick Davis, Julie Walters, Zoë Wanamaker, David Bradley, and Tom Felton.</p>
+        </td>
     </table>
+
+    <ul>
+        <h1>Reparto</h1>
+        <li>Robbie Coltrane as Rubeus Hagrid</li>
+        <li>Richard Harris as Albus Dumbledore</li>
+        <li>Ian Hart as Quirinus Quirrell</li>
+        <li>John Cleese as Nearly Headless Nick</li>
+        <li>Maggie Smith as Minerva McGonagall</li>
+        <li>Alan Rickman as Severus Snape</li>
+        <li>Zoë Wanamaker as Rolanda Hooch</li>
+    </ul>
+    <table>
+        <td><iframe width="300" height="300" src="https://www.youtube.com/embed/ZgrCZVjPg9g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+             encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+        <td><iframe width="300" height="300" src="https://www.youtube.com/embed/WE4AJuIvG1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+        <td><iframe width="300" height="300" src="https://www.youtube.com/embed/uwM2oPGQMl4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+    </table>
+    
+  
 
 </body>
 </html>
+
+<!-- 
+    titulo
+    imagen
+    descripcion
+    reparto(en lista)
+    tabla de videos
+ -->
